# cpp-clockwork-base32

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md  conanfile.txt  mktable.fsx
include/: clockwork-base32.hpp
test/: CMakeLists.txt  base32.cpp  doctest-rapidcheck.hpp  main.cpp
